--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'com.squareup.okhttp:okhttp-urlconnection:1.6.0'
     implementation 'com.firebaseui:firebase-ui-storage:6.2.0'
     implementation 'androidx.cardview:cardview:1.0.0'
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
 
 
 
