--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Calendar"
+            android:name=".calendar.Calendar"
             android:label="My CPD Calendar"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
