--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".calendar.Calendar"
             android:label="My CPD Calendar"
@@ -57,8 +57,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".auth.Register" />
-        <activity android:name=".auth.Login" />
+        <activity
+            android:name=".auth.Register"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".auth.Login"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".MainActivity"
             android:label="CPD Journal"
