--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".calendar.Calendar"
             android:label="My CPD Calendar"
@@ -40,13 +40,15 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.ActivityDetails"
-            android:label="@string/title_activity_details"
+            android:label="Activity Details"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.EditActivity"
+            android:label="Edit Activity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.AddActivity"
+            android:label="Add Activity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Splash"
@@ -58,16 +60,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".auth.Register"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:name=".auth.Register" />
         <activity
-            android:name=".auth.Login"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:name=".auth.Login" />
         <activity
             android:name=".MainActivity"
-            android:label="CPD Journal"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.example.android.fileprovider"
