layouts fixed across login, register, add activity using material library

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,8 +75,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".auth.Register" />
-        <activity android:name=".auth.Login" />
+        <activity
+            android:name=".auth.Register"
+            android:label="Create Account"
+            />
+        <activity
+            android:name=".auth.Login"
+            android:theme="@style/AppTheme.NoActionBar"
+            />
         <activity
             android:name=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar" />
